<resources>
    <string name="app_name">WeatherCalendar</string>
    <string name="Authentication">Вход в систему</string>
    <string name="prompt_login">Логин</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_password_again">Повторите пароль</string>
    <string name="action_register">Нет аккаунта? Зарегистрироваться</string>
    <string name="Registration">Регистрация</string>
    <string name="forgot_password">Забыли пароль</string>
    <string name="reset_password">Смена пароля</string>
    <string name="action_reset_password">Сменить пароль</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_registration">Зарегистрироваться</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Неправильный логин</string>
    <string name="invalid_password">Пароль должен быть >5 символов</string>
    <string name="login_failed">"Аутентификация провалена"</string>
    <string name="back">Назад</string>
    <string name="exit">Выйти</string>

    <string name="add_weather_entry">Добавить запись о погоде</string>
    <string name="view_weather_entries">Просмотреть записи</string>

    <string name="city">Город</string>
    <string name="select_date">Выбрать дату</string>
    <string name="select_time">Выбрать время</string>
    <string name="temperature_celsius">Температура (°C)</string>
    <string name="precipitation">Осадки</string>
    <string name="save_entry">Сохранить запись</string>
    <string name="error_field_required">Это поле обязательно</string>
    <string name="entry_saved_successfully">Запись успешно сохранена</string>
    <string name="error_saving_entry">Ошибка при сохранении записи</string>
    <string name="create_obs">Создание записи</string>
    <string name="no_data">Нет данных на выбранную дату</string>
    <string name="less_than"><![CDATA[<]]></string>
    <string name="more_than"><![CDATA[>]]></string>

    <string-array name="precipitation_types">
        <item>Ясно</item>
        <item>Дождь</item>
        <item>Снег</item>
        <item>Град</item>
    </string-array>
</resources>