<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetPass.ResetPassFragment">
    <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/reset_password"
        android:textSize="20sp"
        android:gravity="center"/>

    <EditText
        android:id="@+id/editText_resetLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="username"
        android:ems="15"
        android:hint="@string/prompt_login"
        android:inputType="text"
        android:minHeight="48dp"
        android:maxWidth="150dp"
        style="@style/BorderedEditTextStyle"/>

    <EditText
        android:id="@+id/editText_resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="password"
        android:ems="15"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck"
        android:maxWidth="150dp"
        style="@style/BorderedEditTextStyle"/>

    <EditText
        android:id="@+id/editText_resetPasswordAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:ems="15"
        android:hint="@string/prompt_password_again"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:maxWidth="150dp"
        style="@style/BorderedEditTextStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_reset_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_marginEnd="5dp"
            android:text="@string/action_reset_password" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            style="@style/Widget.Material3.Button.OutlinedButton" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarReset"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"/>

    </LinearLayout>
</FrameLayout>