<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterFragment"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/Registration"
            android:textSize="20sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/editText_registerLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="15"
            android:hint="@string/prompt_login"
            android:inputType="text"
            android:minHeight="48dp"
            android:maxWidth="150dp"/>

        <EditText
            android:id="@+id/editText_registerPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:autofillHints="password"
            android:ems="15"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="TextContrastCheck"
            android:maxWidth="150dp"/>

        <EditText
            android:id="@+id/editText_registerPasswordAgain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:ems="15"
            android:hint="@string/prompt_password_again"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:maxWidth="150dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_register_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginEnd="5dp"
                android:text="@string/action_registration" />

            <Button
                android:id="@+id/button_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                style="@style/Widget.Material3.Button.OutlinedButton" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"/>

    </LinearLayout>
</FrameLayout>